# libGY87

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
inc/: GY87.h  bmp180.h  gy87_lib_internal.h  hmc5883l.h  mpu6050.h
src/: bmp180.c  gy87.c  gy87_lib_internal.c  hmc5883l.c  mpu6050.c
